--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,8 @@
 #nav-bar {
     height: 10vh;
 }
+.container {
+    font-family: 'Courier New', Courier, monospace;
+    width: 75%;
+    margin: 0 auto;
+}
